<resources>
    <string name="app_name">TestJavaApp</string>
    <string name="images">Images(Task 8)</string>
    <string name="notifications">Notification(Task 7)</string>
    <string name="fragment_images">images</string>
    <string name="notification">notification</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">some desc</string>
    <string name="service">Service(Task 9)</string>
    <string name="test">UnitTest(Task 10)</string>
    <string name="title_activity_unit_test">UnitTestActivity</string>
    <string name="wrong_input">Wrong input</string>
    <string name="result_size_text">Result size is:</string>
    <string name="add_notification">Add Notification</string>
    <string name="send_notification">Send Notification</string>
    <string name="cancel_notification">Cancel Notification</string>
    <string name="enter_notification_body">Enter notification body</string>
    <string name="enter_notification_title">Enter notification title</string>
    <string name="enter_num_of_threads">Enter num of Threads</string>
    <string name="simultaneous_thread_num">Enter num of Threads to work simultaneously</string>
    <string name="load_images">Load Images</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="enter_bitmap_size">Enter Bitmap size</string>
    <string name="enter_view_size">Enter View Size</string>
</resources>
