<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UnitTestActivity"
    tools:showIn="@layout/activity_unit_test">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"/>

    <EditText
        android:id="@+id/et_view_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_view_size"
        android:inputType="number"
        android:layout_below="@+id/toolbar"/>

    <EditText
        android:id="@+id/et_bitmap_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_view_size"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_bitmap_size"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_res_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_bitmap_size"
        android:layout_marginTop="5dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_calc_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_res_size"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_corners"
        android:onClick="calculateBitmapSize"
        android:text="@string/calculate"
        android:textAlignment="center"
        android:textSize="18sp" />


</RelativeLayout>